# dataflow

./: .copier-answers.yml  .gitignore  Dockerfile  LICENSE  README.md  development.md  docker-compose.yml  justfile  mkdocs.yml  prd.md  pyproject.toml  pyrightconfig.json  tasks.md  workspace.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  docker-build.yml  integration-tests.yml
config/grafana/dashboards/: application_logs.json  cli_logs.json  test_dashboard.json
config/grafana/provisioning/dashboards/: default.yaml
config/grafana/provisioning/datasources/: loki.yaml  loki.yml
config/prometheus/: prometheus.yml
config/promtail/: config.yml
devtools/: lint.py
docs/: api.md  cli_usage.md  environment_variables.md  extending.md  index.md  onboarding.md  tasks.md  testing.md  troubleshooting.md  workflow_authoring.md  workflow_system.md  workflows.md
integrations/evidence/: entrypoint.sh  evidence.settings.json
integrations/evidence/pages/: index.md
src/dataflow/: __init__.py  dagster_repo.py
src/dataflow/api/: __init__.py  main.py
src/dataflow/api/routers/: __init__.py  configs.py  data.py  health.py  logs.py  workflows.py
src/dataflow/cli/: __init__.py  config.py  main.py
src/dataflow/cli/commands/: __init__.py  docs.py  service.py  workflow.py
src/dataflow/shared/: README.md  config.py  dagster_io.py  db.py  ingestion.py  logging.py  minio.py  transform.py
src/dataflow/templates/: __init__.py
src/dataflow/templates/workflow_template/: __init__.py  assets.py  config.yaml  dagster_job.py  ingestion.py  transform.py
src/dataflow/templates/workflow_template/dbt/: README.md  schema.yml  sources.yml
src/dataflow/templates/workflow_template/dbt/models/: staged_data.sql  summary_table.sql
src/dataflow/templates/workflow_template/evidence/: README.md  index.md
src/dataflow/templates/workflow_template/tests/: test_dagster_job.py  test_ingestion.py  test_transform.py
src/dataflow/workflows/: __init__.py  registry.py
src/dataflow/workflows/example_workflow/: __init__.py  config.yaml  dagster_job.py  ingestion.py  transform.py
src/dataflow/workflows/example_workflow/dbt/: README.md
src/dataflow/workflows/example_workflow/evidence/: README.md  index.md
src/dataflow/workflows/example_workflow/evidence/pages/: index.md
src/dataflow/workflows/nightscout/: __init__.py  assets.py  config.yaml  dagster_job.py  ingestion.py  transform.py
src/dataflow/workflows/nightscout/dbt/: README.md  daily_summary.sql  readings.sql  schema.yml  treatments.sql
src/dataflow/workflows/nightscout/evidence/: README.md  dashboard.md  hourly_patterns.md  index.md
src/dataflow/workflows/nightscout/tests/: test_ingestion.py  test_nightscout_transform.py
tests/: __init__.py  conftest.py  utils.py
tests/api/: __init__.py  test_health.py  test_workflow_endpoints.py
tests/cli/: test_service.py  test_workflow_commands.py
tests/integration/: __init__.py  test_nightscout_workflow.py  test_services.py
tests/shared/: test_config.py  test_dagster_io.py  test_db.py  test_ingestion.py  test_logging.py  test_minio.py  test_transform.py
tests/workflows/: __init__.py  test_nightscout.py  test_plugin.py  test_registry.py
