# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/iamgp/dataflow"
# Homepage = "https://..."
# Documentation = "https://..."

[project]
name = "dataflow"
description = "Modern, modular data warehouse platform"
authors = [{ name = "Gareth Price", email = "garethprice@me.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
dynamic = ["version"]

# ---- Main dependencies ----

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "dagster>=1.7.0",
    "dbt-core>=1.7.0",
    "duckdb>=0.10.0",
    "psycopg[binary]>=3.1.18",   # For Postgres support
    "minio>=7.2.5",
    "loguru>=0.7.2",
    "structlog>=24.1.0",
    "click>=8.1.7",
    "pydantic>=2.7.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "rich>=13.9.4",
    # Add other core dependencies as needed
]

# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "codespell>=2.4.1",
    "basedpyright>=1.28.2",
    "funlog>=0.2.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.21",
    "pytest-cov>=5.0.0",
    "docker-compose>=1.29.2",
    "pre-commit>=3.7.0",
    "ipython>=8.24.0",
    # Evidence is a Node.js tool, but you may want to add a Python wrapper or doc here
    # "prometheus-client>=0.20.0",  # For custom metrics if needed
    # "requests-mock>=1.12.1",      # For API testing
]

[project.scripts]
dataflow = "dataflow.cli:main"
dataflow-api = "dataflow.api:main"
# Add more entrypoints as needed

# ---- Build system ----

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = "true"

[tool.hatch.build.targets.wheel]
packages = ["src/dataflow"]

# ---- Settings ----

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
ignore = [
    "E501",
    "E402",
    "E731",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC002",
]

[tool.basedpyright]
include = ["src", "tests", "devtools"]
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnreachable = false

[tool.codespell]
# ignore-words-list = "foo,bar"
# skip = "foo.py,bar.py"

[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["src", "tests"]
norecursedirs = []
filterwarnings = []

# ---- MkDocs ----

[tool.mkdocs]
site_name = "DATAFLOW Documentation"
docs_dir = "docs"
site_dir = "site"
theme = "material"
