# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/iamgp/dataflow"
# Homepage = "https://..."
# Documentation = "https://..."

[project]
name = "dataflow"
description = "Modern, modular data warehouse platform"
authors = [{ name = "Gareth Price", email = "garethprice@me.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.12"
dynamic = ["version"]

# ---- Main dependencies ----

dependencies = [
    "click>=8.1.8",
    "dagster>=1.10.11",
    "dbt-core>=1.9.4",
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "minio>=7.2.15",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "structlog>=25.2.0",
    "uvicorn>=0.34.2",
]

# ---- Dev dependencies ----
[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "codespell>=2.4.1",
    "funlog>=0.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
]


[project.scripts]
dataflow = "dataflow.cli:main"
dataflow-api = "dataflow.api:main"
# Add more entrypoints as needed

# ---- Build system ----

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = "true"

[tool.hatch.build.targets.wheel]
packages = ["src/dataflow"]

[tool.setuptools.package-dir]
"" = "src"


# ---- Settings ----

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
ignore = [
    "E501",
    "E402",
    "E731",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC002",
]

[tool.basedpyright]
include = ["src", "tests", "devtools"]
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnreachable = false

[tool.codespell]
# ignore-words-list = "foo,bar"
# skip = "foo.py,bar.py"

[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["src", "tests"]
norecursedirs = []
filterwarnings = []

# ---- MkDocs ----

[tool.mkdocs]
site_name = "DATAFLOW Documentation"
docs_dir = "docs"
site_dir = "site"
theme = "material"
